force-app/main/default/objects/TwilioSF__BulkMessage__c/TwilioSF__BulkMessage__c.object-meta.xml
<CustomObject>
    <label>Twilio Bulk Message</label>
    <nameField>
        <displayFormat>BM - {000000}</displayFormat>
        <label>Bulk Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>