force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Body__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>