force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Campaign__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>BulkMessages</relationshipName>
    <type>Lookup</type>
</CustomField>