force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Future_Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Future_Send_Date_Time__c</fullName>
    <label>Future Send Date/Time</label>
    <type>DateTime</type>
</CustomField>