force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Media_URL__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Media_URL__c</fullName>
    <description>A URL that points to an image to be included in the Bulk Message</description>
    <inlineHelpText>Enter a valid URL that points to an image.</inlineHelpText>
    <label>Media URL</label>
    <type>Url</type>
</CustomField>