force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Message_c__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message_c__c</fullName>
    <label>Message__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>