force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Messages_Undelivered__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Messages_Undelivered__c</fullName>
    <label># of messages undelivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>