force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Notification_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Notification_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Email Sent</label>
    <type>Checkbox</type>
</CustomField>