force-app/main/default/objects/TwilioSF__BulkMessage__c/fields/TwilioSF__Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Sent_Date_Time__c</fullName>
    <label>Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>