force-app/main/default/objects/TwilioSF__BulkMessage__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Campaign__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__Messages_Accepted__c</columns>
    <columns>TwilioSF__Messages_Queued__c</columns>
    <columns>TwilioSF__Messages_Sent__c</columns>
    <columns>TwilioSF__Messages_Delivered__c</columns>
    <columns>TwilioSF__Messages_Failed__c</columns>
    <columns>TwilioSF__Messages_Blocked__c</columns>
    <columns>TwilioSF__Messages_Undelivered__c</columns>
    <columns>TwilioSF__Sent_Date_Time__c</columns>
    <columns>TwilioSF__Future_Send_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>